# live

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  telegram-streamer.service
.github/workflows/: ci.yml
monitoring/: prometheus.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
src/telegram_streamer/: __init__.py  api.py  cli.py  config.py  exceptions.py  ffmpeg.py  logging_config.py  models.py  reconnection.py  streamer.py
tests/: conftest.py  test_api.py  test_config.py  test_ffmpeg.py  test_models.py  test_reconnection.py  test_streamer.py
